# PyTorch-GAN

./: .env-template  .gitignore  Makefile  pyproject.toml  readme.md
implementations/: util.py
implementations/aae/: aae_skin.py
implementations/acgan/: acgan_melanoma.py  acgan_skin.py
implementations/began/: began_skin.py
implementations/bgan/: bgan.py  bgan_skin.py
implementations/ccgan/: ccgan_skin.py
implementations/cgan/: cgan_skin.py
implementations/cluster_gan/: clustergan_skin.py
implementations/dcgan/: dcgan_skin.py
implementations/dragan/: dragan.py  dragan_skin.py
implementations/ebgan/: ebgan_skin.py
implementations/gan/: gan_skin.py
