[project]
name = "pytorch-gan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=0.4.0,<=2.2.0",
    "torchvision",
    "matplotlib",
    "numpy<2",
    "scipy",
    "pillow",
    "urllib3",
    "scikit-image",
    "dotenv>=0.9.9",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
torch = { index = "cpu" , marker = "sys_platform == 'linux'" }
torchvision = { index = "cpu", marker = "sys_platform == 'linux'" }

[[tool.uv.index]]
name = "cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
